--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -67,6 +67,7 @@
                 font-family: "Poppins", sans-serif;
                 color: var(--white);  
                 text-decoration: none;
+                cursor: pointer;
             }
             &:hover {
                 background-color: var(--purple);
