--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,6 @@
 <div class="imprint">
     <div class="content">
-        <h1>Impressum</h1>
+        <div class="imprint-title">Impressum</div>
         <p>Angaben gemäß § 5 TMG</p>
         <p>Denise Siegl 
             <br>Calle C&#233;sar Puget Riquer 24 G3<br>07840 Santa Eulalia del R&#237;o<br>
@@ -16,7 +16,8 @@
             <a href="mailto:denisabel78@hotmail.de">denisabel78@hotmail.de</a>
             <br>
         </p>
-        <p>
+        
+        <div class="privacy">
             <h2>Haftungsausschluss:</h2>
             <br>
             <h2>Datenschutz</h2>
@@ -25,9 +26,10 @@
             Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich. <br>
             Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.<br>
         
-        <br>
-        Impressum erstellt von 
-        <a href="https://www.impressum-generator.de">impressum-generator.de</a>
+            <br>
+            Impressum erstellt von 
+            <a href="https://www.impressum-generator.de">impressum-generator.de</a>
+        </div>
     </div>
 </div>
      
