hover imprint link border bottom only half

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -25,9 +25,16 @@
             text-align: center;
             cursor: pointer;
             margin-bottom: 8px;
-            &:hover {
+            /* &:hover {
+                transition: 0.5s;
+            } */
+            &:hover::after {
+                content: '';
+                display: block;
+                position: relative;
+                width: 50px;
+                margin-bottom: -2px;
                 border-bottom: 2px solid var(--light-blue);
-                margin-bottom: 6px;
             }
         }
     }
@@ -62,6 +69,7 @@
         }
     }
 }
+
 
 @media only screen and (max-width: 1000px) {
     .footer {
@@ -102,9 +110,10 @@
                 font-size: 30px !important;
                 margin-bottom: 20px !important;
                 padding-bottom: 3.9px;
-                &:hover {
+                &:hover::after {
                     border-bottom: 5px solid var(--light-blue);
-                    margin-bottom: 15px !important;
+                    margin-bottom: -5px !important;
+                    width: 70px;
                 }
             }
         }
