edit center position footer child elements

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,11 @@
 <footer class="footer">
     <div class="content-left">
-        <a href="#">
-            <img src="{{ is.logo }}">
-        </a>
-        <div routerLink="/imprint">Imprint</div>
+        <div class="logo-link">
+            <a href="#">
+                <img src="{{ is.logo }}">
+            </a>
+            <div routerLink="/imprint">Imprint</div>
+        </div>
     </div>
     <div class="content-middle">
         <div>&copy; Denise Siegl 2023</div>
