--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,8 +13,14 @@
     background-color: var(--background);
     .content-left {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
+        width: 20vw;
+        .logo-link {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
         img {
             width: 6.944vw;
             height: 6.944vw;
@@ -24,7 +30,6 @@
         div {
             text-align: center;
             cursor: pointer;
-            margin-bottom: 8px;
             /* &:hover {
                 transition: 0.5s;
             } */
@@ -38,10 +43,13 @@
             }
         }
     }
+    .content-middle {
+        width: 20vw;
+    }
     .icons {
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         z-index: 2;
         width: 20vw;
         a {
@@ -101,6 +109,16 @@
             }
         }
     }
+}
+
+@media only screen and (max-width: 1114px) {
+    .content-left {
+        width: unset !important;
+    }
+    .content-middle {
+        width: unset !important;
+    }
+    
 }
 
 @media only screen and (min-width: 2000px) {
