--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -14,6 +14,7 @@
         gap: 10px;
         .imprint-title {
             font-size: 6.25vw;
+            font-family: "Poppins bold";
         }
         a {
             text-decoration: none;
@@ -25,7 +26,7 @@
             font-size: 16px;
         }
         h2 {
-            font-size: 3vw;
+            font-size: 35px;
         }
     }
 }
@@ -38,9 +39,9 @@
             .imprint-title {
                 font-size: 32px !important;
             }
-            h2 {
-                font-size: 25px !important;
-            }
+        }
+        h2 {
+            font-size: 25px !important;
         }
     }
 }
@@ -51,6 +52,9 @@
             p, .privacy {
                 font-size: 30px !important;
             }
+        }
+        h2 {
+            font-size: 60px !important;
         }
     }
     
