animation by scroll comes earlier, edit position of shadow in portfolio-section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -39,7 +39,7 @@
 
 <div class="about-me-content" #myaboutme id="aboutMe">
     <img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
-    <div class="content-left" data-aos="zoom-in"  data-aos-anchor-placement="top-center">
+    <div class="content-left" data-aos="zoom-in" data-aos-offset="200">
         <div class="header-about-me-content">About Me</div>
         <div class="present-text">Hi, I am Denise. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores, dolores ea commodi voluptatem, temporibus dolore expedita, perspiciatis voluptas minus possimus dignissimos</div>
         <div class="subinfo-first">
@@ -52,7 +52,7 @@
             <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis</div>
         </div>
     </div>
-    <div data-aos="zoom-in" class="profile-round-container" data-aos="zoom-in"  data-aos-anchor-placement="top-center">
+    <div data-aos="zoom-in" class="profile-round-container" data-aos="zoom-in" data-aos-offset="200">
         <img class="profile-round" src="assets/img/charater2.png">
         <img class="line-profile-round" src="assets/img/line-about-me.png">
     </div>
