--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -87,13 +87,16 @@
                     text-decoration: none;
                     cursor: pointer;
                 }
-                &:hover {
-                    background-color: var(--purple);
-                    width: 185px;
-                    height: 68px;
-                    transition: 0.2s ease-in;
-                    margin-top: 40px;
+                @media (hover: hover){
+                    &:hover {
+                        background-color: var(--purple);
+                        width: 185px;
+                        height: 68px;
+                        transition: 0.2s ease-in;
+                        margin-top: 40px;
+                    }
                 }
+               
             }
         }
     }
@@ -135,9 +138,11 @@
                 border-radius: 5px;
                 transition: 0.2s ease-in;
                 cursor: pointer;
-                &:hover {
-                    transform: scale(1.5);
-                    transition: 0.2s ease-in;
+                @media (hover: hover){
+                    &:hover {
+                        transform: scale(1.5);
+                        transition: 0.2s ease-in;
+                    }
                 }
                 img {
                     filter: brightness(0) saturate(100%) invert(83%) sepia(45%) saturate(4835%) hue-rotate(208deg) brightness(99%) contrast(150%);                    
@@ -226,9 +231,11 @@
             object-fit: contain;
             margin-right: 20px;
             transition: 0.2s ease-in;
-            &:hover {
-                transform: scale(1.3);
-                transition: 0.2s ease-in;
+            @media (hover: hover){
+                &:hover {
+                    transform: scale(1.3);
+                    transition: 0.2s ease-in;
+                }
             }
         }
     }
