--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -177,8 +177,10 @@
                     color: var(--purple);
                     margin-left: unset;
                     cursor: pointer;
-                    &:hover {
-                        border-bottom: 1px solid var(--purple);
+                    @media (hover: hover){
+                        &:hover {
+                            border-bottom: 1px solid var(--purple);
+                        }
                     }
                 }
             }
@@ -207,12 +209,14 @@
                 cursor: pointer;
                 transition: 0.2s ease-in;
                 border: none;
-                &:not([disabled]):hover {
-                    background-color: var(--purple);
-                    width: 261px;
-                    height: 68px;
-                    transition: 0.2s ease-in;
-                    margin: -5px;
+                @media (hover: hover){
+                    &:not([disabled]):hover {
+                        background-color: var(--purple);
+                        width: 261px;
+                        height: 68px;
+                        transition: 0.2s ease-in;
+                        margin: -5px;
+                    }
                 }
             } 
             button:disabled {
@@ -259,8 +263,10 @@
         height: 39px;
         cursor: pointer;
         background-image: url('../../assets/img/arrow-up.png');
-        &:hover {
-            content: url('../../assets/img/arrow-up-hover.png');
+        @media (hover: hover){
+            &:hover {
+                content: url('../../assets/img/arrow-up-hover.png');
+            }
         }
     }
 }
