--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -31,16 +31,18 @@
             div {
                 text-align: center;
                 cursor: pointer;
-                &:hover {
-                    transition: 0.5s;
-                }
-                &:hover::after {
-                    content: '';
-                    display: block;
-                    position: relative;
-                    width: 50px;
-                    margin-bottom: -2px;
-                    border-bottom: 2px solid var(--light-blue);
+                @media (hover: hover){
+                    &:hover {
+                        transition: 0.5s;
+                    }
+                    &:hover::after {
+                        content: '';
+                        display: block;
+                        position: relative;
+                        width: 50px;
+                        margin-bottom: -2px;
+                        border-bottom: 2px solid var(--light-blue);
+                    }
                 }
             } 
         }
@@ -66,9 +68,11 @@
             border-radius: 5px;
             transition: 0.2s ease-in;
             cursor: pointer;
-            &:hover {
-                transform: scale(1.5);
-                transition: 0.2s ease-in;
+            @media (hover: hover){
+                &:hover {
+                    transform: scale(1.5);
+                    transition: 0.2s ease-in;
+                }
             }
             img {
                 filter: brightness(0) saturate(100%) invert(83%) sepia(45%) saturate(4835%) hue-rotate(208deg) brightness(99%) contrast(150%);                    
