--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -21,8 +21,10 @@
                 height: 55px;
                 object-fit: contain;
                 margin: 0 2.778vw 1vw 2.778vw;
-                &:hover {
-                    transform: scale(1.2);
+                @media (hover: hover){
+                    &:hover {
+                        transform: scale(1.2);
+                    }
                 }
             }
             div {
@@ -69,12 +71,14 @@
                 text-decoration: none;
                 cursor: pointer;
             }
-            &:hover {
-                background-color: var(--purple);
-                width: 220px;
-                height: 68px;
-                transition: 0.2s ease-in;
-                margin-top: 40px;
+            @media (hover: hover){
+                &:hover {
+                    background-color: var(--purple);
+                    width: 220px;
+                    height: 68px;
+                    transition: 0.2s ease-in;
+                    margin-top: 40px;
+                }
             }
         }
     }
