add legacy policy, fix scroll problem portfolio, make full text link for legacy policy at contactform

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,7 +6,7 @@
 <div class="contact-content">
     <div class="content-left" data-aos="zoom-in" data-aos-offset="200">
         <div>Got a problem to solve?</div>
-        <div>Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</div>
+        <div>Contact me through this form. I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</div>
         <div>Need a Frontend developer? 
             <span>Contact me!</span>
         </div>
@@ -83,10 +83,10 @@
                 <div class="checkbox" (click)="toggleChecked()">
                     <div [class.checkbox-selected]="isChecked" #checkboxSelector></div>
                 </div>
-                <span>I've read the
-                    <span class="privacy-link" routerLink="/imprint">privacy policy</span> 
+                <a class="text-imprint" routerLink="/imprint" target="_blank">I've read the
+                    <span class="privacy-link">privacy policy</span> 
                     and agree to the processing of my data as outlined.
-                </span>
+                </a>
             </div>
 
             <p class="error-box">
