--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             <a href="#">
                 <img src="{{ is.logo }}">
             </a>
-            <div routerLink="/imprint">Imprint</div>
+            <div routerLink="/imprint">Imprint & Privacy Policy</div>
         </div>
     </div>
     <div class="content-middle">
