remove routerlink imprint, add href

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -83,7 +83,7 @@
                 <div class="checkbox" (click)="toggleChecked()">
                     <div [class.checkbox-selected]="isChecked" #checkboxSelector></div>
                 </div>
-                <a class="text-imprint" routerLink="/imprint" target="_blank">I've read the
+                <a class="text-imprint" href="/imprint" target="_blank">I've read the
                     <span class="privacy-link">privacy policy</span> 
                     and agree to the processing of my data as outlined.
                 </a>
