--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,15 @@
     cursor: default;
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #141D2F;
     max-width: 100%;
     width: 100%;
-    overflow-x: hidden;
 }
 
 *::-webkit-scrollbar {
