--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -300,7 +300,7 @@
 
 @media only screen and (max-width: 1000px) {
     .contact {
-        scroll-margin-top: 19vw;
+        scroll-margin-top: 22vw;
         div {
             font-size: 32px !important;
         }
@@ -411,3 +411,10 @@
         }
     }
 }
+
+/* @media only screen and (max-height: 480px) {
+    .contact {
+        scroll-margin-top: 70px;
+    } 
+}
+ */
