--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -67,6 +67,7 @@ header {
         border-radius: 9px;
         opacity: 1;
         left: 0;
+        cursor: pointer;
         transform: rotate(0deg);
         transition: .25s ease-in-out;
         &:nth-child(1) {
