edit about me text, change email

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -42,15 +42,25 @@
     <img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
     <div class="content-left" data-aos="zoom-in" data-aos-offset="200">
         <div class="header-about-me-content">About Me</div>
-        <div class="present-text">I am a passionate German-speaking frontend developer based in Ibiza, Spain, bringing new ideas to life through programming user-friendly and easy-to-use applications. I am always looking to improve my skills through the latest technologies. I am ambitious, creative and constantly seeking new challenges.</div>
+        <div class="present-text">
+            Hello! I'am Denise, an enthusiastic Front-End Developer passionate about creating user-friendly and functional applications. 
+            Early on, I discovered my passion for creative work on the computer, which inspired me to pursue professional training at the Developer Academy.
+            The practice-oriented training not only enabled me to create solid knowledge in the development of innovative individual projects, but also to improve 
+            my skills in group dynamics by working in a team.
+        </div>
         <div class="subinfo-first">
             <img src="assets/img/idea.png">
-            <div>Completing my education at the Developer Academy laid a solid foundation for my career in frontend development. The dynamic nature of this field fuels my curiosity and passion. I constantly seek opportunities to learn and grow, embracing the ever-changing technology landscape. I prioritize meticulous planning, clean coding, and thorough documentation to ensure high-quality work. Agile methods and teamwork are essential elements in my approach to achieving the best results. Frontend development is not just a profession, but a true calling that brings me joy and satisfaction.</div>
+            <div>
+                I am constantly looking for opportunities to learn and grow, embracing the ever-changing technology landscape. I emphasize careful planning, clean coding, 
+                and thorough documentation to ensure high-quality work.
+            </div>
         </div>
 
         <div class="subinfo-second">
             <img src="assets/img/puzzle.png">
-            <div>My quick perception and determination to always learn new things has already allowed me to prove myself in 3 professions. I originally started my career as an office administrator, then turned to medicine, then worked as a chef for 10 years. transitioning into the IT world is a liberating and exciting step for me. I have discovered that working as a frontend developer seamlessly combines my passion for creativity and technology. Developing websites and applications that support and inspire users in their daily lives brings me deep satisfaction and drives me in my work.</div>
+            <div>
+                Moving into the world of IT is exciting and liberating for me. Creating websites and applications that support and inspire users brings me joy and motivates me in my work.
+            </div>
         </div>
     </div>
     <div data-aos="zoom-in" class="profile-round-container" data-aos="zoom-in" data-aos-offset="200">
