--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -11,9 +11,9 @@
         </p>
         <p>
             <strong>Kontakt:</strong>
-            <br> Telefon: 0034-603194118
+            <br> Telefon: +34 603 194 118
             <br> E-Mail: 
-            <a href="mailto:denisabel78@hotmail.de">denisabel78@hotmail.de</a>
+            <a href="mailto:denise.siegl@outlook.com">denise.siegl@outlook.com</a>
             <br>
         </p>
         
