--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -43,10 +43,8 @@
     <div class="content-left" data-aos="zoom-in" data-aos-offset="200">
         <div class="header-about-me-content">About Me</div>
         <div class="present-text">
-            Hello! I'am Denise, an enthusiastic Front-End Developer passionate about creating user-friendly and functional applications. 
-            Early on, I discovered my passion for creative work on the computer, which inspired me to pursue professional training at the Developer Academy.
-            The practice-oriented training not only enabled me to create solid knowledge in the development of innovative individual projects, but also to improve 
-            my skills in group dynamics by working in a team.
+            Hi, I'am Denise, an enthusiastic Front-End Developer. My interest in creative computing let me to a professional training at the Developer Academy. 
+            The practice-oriented training not only gave me solid knowledge in the development of innovative projects, but also improved my teamwork skills.
         </div>
         <div class="subinfo-first">
             <img src="assets/img/idea.png">
