--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -18,7 +18,7 @@
                         <button class="button-right">Live test</button>
                     </a>
                     <a href="{{ project.linkGitHub }}" target="_blank">
-                        <button class="github-btn button-right">Github</button>
+                        <button class="github-btn button-right">GitHub</button>
                     </a>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                         <button class="button-left">Live test</button>
                     </a>
                     <a href="{{ project.linkGitHub }}" target="_blank">
-                        <button class="github-btn button-left">Github</button>
+                        <button class="github-btn button-left">GitHub</button>
                     </a>
                 </div>
             </div>
