edit name of akademie

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -43,7 +43,7 @@
     <div class="content-left" data-aos="zoom-in" data-aos-offset="200">
         <div class="header-about-me-content">About Me</div>
         <div class="present-text">
-            Hi, I'am Denise, an enthusiastic Front-End Developer. My interest in creative computing let me to a professional training at the Developer Academy. 
+            Hi, I'am Denise, an enthusiastic Front-End Developer. My interest in creative computing let me to a professional training at the Developer Akademie. 
             The practice-oriented training not only gave me solid knowledge in the development of innovative projects, but also improved my teamwork skills.
         </div>
         <div class="subinfo-first">
